<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotePrototype</string>
    <string name="action_settings">Settings</string>
    <string name="about">Application for TFG.\n\nCreated by Pablo Garcia\n\nV1.0 [2013/2014]</string>
    <string name="about_tit">About APP</string>
    <string name="descInitImg">NOTE APP</string>
    <string name="titleNote">Title (*):</string>
    <string name="titlePwd">Title (*):</string>
    <string name="txtPwd">Pwd (*):</string>
    <string name="txtUrl">Url:</string>
    <string name="txtUser">User:</string>
    <string name="menu">MENU</string>
    <string name="menuTitle">OPTIONS</string>
    <string name="butMenu1">NOTES</string>
    <string name="butMenu2">PASSWORDS</string>
    <string name="butMenu3">ABOUT THIS APP</string>
    <string name="empty"></string>
    <string name="save">Save</string>
    <string name="no_notes">No notes yet</string>
    <string name="no_pwds">No passwords yet</string>
    <string name="no_elems">No elements in list yet</string>
    <string name="menul1">New</string>
    <string name="menuList1">Delete</string>
    <string name="menuList2">Edit</string>
    <string name="msgDelete">Note delete successfully</string>
    <string name="msgDelPwd">Password delete successfully</string>
    <string name="msgDelElem">Element delete successfully</string>
    <string name="msgEditNote">Note is incomplete. Please enter title and body</string>
    <string name="msgEditPwd">Pwd is incomplete. Please enter title and password</string>
    <string name="msgEditBuy">Please enter title</string>
    <string name="msgEditElem">Please enter name of element</string>
    <string name="PwdSecret">********</string>
    <string name="PwdSee">See</string>
    <string name="PwdSeeON">Visible</string>
    <string name="PwdSeeOFF">Hidden</string>
    <string name="delete">Delete</string>
    <string name="defaultAmount">1</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="separator">-</string>
    <string name="shopList">SHOPPING LIST</string>
    <string name="elemList">ELEMENT LIST</string>
    <string name="name">Name (*):</string>
    <string name="tasks">TASKS</string>
    <string name="task">Task</string>
    <string name="internet">internet</string>
    <string name="photoRecipe">photo</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Instructions">Instructions</string>
    <string name="no_recipes">No recipes in list yet</string>
    <string name="msgDelRecipe">Recipe delete successfully</string>
    <string name="msgEditRecipe">Recipe is incomplete. Please enter title</string>
    <string name="recipe">RECIPES</string>
    <string name="account">ACCOUNTS</string>
    <string name="accounts">Accounts</string>
    <string name="recipes">Recipes</string>
    <string name="total">TOTAL: </string>
    <string name="editTable">EDIT TABLE </string>
    <string name="number">Number (*):</string>
    <string name="Tag">"Tag (*): "</string>
    <string name="sdcardRoute">/sdcard/</string>
    <string name="routeImgFiles">/NoteForHome/RecipeImg/</string>
    <string name="routeImgFilesC">/sdcard/NoteForHome/RecipeImg/</string>
    <string name="shareFile">Share file</string>
    <string name="exportFile">Export to file</string>
    <string name="routeExportFile">/NoteForHome/ExportFile/</string>
    <string name="routeSharingFile">/NoteForHome/ExportFile/Temp/</string>
    <string name="openFile">IMPORT EXTERNAL FILE</string>
    <string name="share">Share</string>
    <string name="export">Export</string>
    <string name="msgImpTask">Tasks were added to the list in the original format. Now you can modify.</string>
    <string name="msgImpAcc">Account were added to the list in the original format. Now you can modify.</string>
    <string name="msgImpBuy">Shopping list were added in the original format. Now you can modify.</string>
    <string name="msgImpRecipe">The exported element was not modified. Recipe were added to the list in the original format.</string>
    <string name="msgImpNote">The exported element was not modified. Note were added to the list in the original format.</string>
    <string name="msgImpPwd">The exported element was not modified. Password were added to the list in the original format.</string>
    <string name="fileCreateMsg">File created in folder NoteForHome/ExportFile </string>
    <string name="errFormat">Error format in input File</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="ini_exp">Management of the application is based on six actions:\n\nAdd: add a new element.\n\nLook: displays information about the item.\n\nEdit: edit the item.\n\nShare: share an item. You can send a file to a friend by mail, telegram, etc..\n\nIMPORTANT: The text file is not encrypted. The security mechanism is based on the shipping.\n\nExport: generate a text file on the sdcard device.\n\nIMPORTANT: The text file is not encrypted.\n\nDelete: delete the item.\n</string>
	<string name="Note_h">NOTES</string>
    <string name="Note_exp">The list appears with the stored notes. To create a new note press "Add" (icon plus). When you create a note, you can:\n\n- Look/Edit: Short press on the note.\n\n- Export/Share /Delete: Long press on the note.\n</string>
    <string name="Pwd_h">PASSWORDS</string>
    <string name="Pwd_exp">The list appears with the stored passwords. To create a new pwds press "Add" (icon plus). When you create a pwd, you can:\n\n- Look: Short press on the element.\n\n- Edit/Export/Share/Delete: Long press on the element.\n</string>
    <string name="Recipe_h">RECIPES</string>
    <string name="Recipe_exp">The list appears with the stored recipes. To create a new recipe press "Add" (icon plus).When you create a recipe, you can:\n\n- Look/Edit: Short press on the recipe.\n\n- Export/Share/Delete: Long press on the recipe.\n</string>
  	<string name="Task_h">TASKS</string>
    <string name="Task_exp">The list appears with the stored tasks.To create a new task press "Add" (icon plus). All tasks can be edited and deleted.\n\nTo export or share the task list click on the corresponding icon menu.\n</string>
    <string name="Accounts_h">ACCOUNTS</string>
    <string name="Accounts_exp">The list appears with the stored tasks.To create a new account press "Add" (icon plus).When you create an account, you can:\n\n- Look: Short press on the item.\n\n- Edit name/Export/Share/Delete: Long press on the item.\n\nFrom the look screen you can manage the elements that make up the account and edit your values.\n</string>
    <string name="ShList_h">SHOPPING LIST</string>
    <string name="ShList_exp">The list appears with the stored shopping list.To create a new shopping list press "Add" (icon plus).When you create shopping list, you can:\n\n- Look: Short press on the item.\n\n- Edit name/Export/Share/Delete: Long press on the item.\n\nFrom the look screen you can manage the elements that make up the list and edit your values.\n</string>
    <string name="menu_help">HELP</string>
    <string name="sections">SECTIONS\n</string>
    
    <string name="titleContextMenu">Select The Action</string>
    
    <!-- PANTALLA MENU -->
	<string name="option1">NOTES</string>
	<string name="option2">PASSWORDS</string>
	<string name="option3">SHOPPING LIST</string>
	<string name="option4">TASK</string>
	<string name="option5">RECIPES</string>
	<string name="option6">ACCOUNTS</string>
	<string name="option7">IMPORT EXTERNAL FILE</string>
	<string name="option8">ABOUT THIS APP</string>
    
</resources>
