<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical" >
        
        <ImageView
            android:id="@+id/imageSpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/espiral2" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="325dp"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/imageSpi"
            android:layout_alignLeft="@+id/imageSpi"
            android:layout_alignRight="@+id/imageSpi"
            android:background="@color/Yellow"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/butMenu1" />

            <Button
                android:id="@+id/butPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/butMenu2" />

            <android.widget.Button
                android:id="@+id/butBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shopList" />

            <Button
                android:id="@+id/butTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tasks" />

            <android.widget.Button
                android:id="@+id/buttonRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe" />

            <android.widget.Button
                android:id="@+id/buttonAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <android.widget.Button
                android:id="@+id/butReadFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/openFile" />

            <Button
                android:id="@+id/butAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/butMenu3" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>