<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
        android:background="@color/Yellow" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewIniExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ini_exp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sections"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewTitN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Note_h"
                android:textColor="@color/Red"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewExpN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Note_exp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewTitP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pwd_h"
                android:textColor="@color/Red"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewExpP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pwd_exp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewTitS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShList_h"
                android:textColor="@color/Red"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewExpS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShList_exp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewTitT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Task_h"
                android:textColor="@color/Red"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewExpT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Task_exp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewTitR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recipe_h"
                android:textColor="@color/Red"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewExpR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recipe_exp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewTitA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Accounts_h"
                android:textColor="@color/Red"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewExpA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Accounts_exp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>