<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Yellow" >

        <TextView
            android:id="@+id/editTextTitleRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/titlePwd"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTitleRecipe"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/textViewNum"
            android:text="@string/empty"
            android:textColor="@color/BlueDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewNum"
            android:layout_alignBottom="@+id/textViewNum"
            android:layout_alignLeft="@+id/textViewT"
            android:text="@string/empty"
            android:textColor="@color/BlueDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/textViewU"
            android:text="@string/PwdSecret"
            android:textColor="@color/BlueDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewNum"
            android:layout_below="@+id/textViewU"
            android:layout_marginTop="20dp"
            android:text="@string/txtPwd"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/textViewP"
            android:layout_alignRight="@+id/textViewP"
            android:text="@string/empty"
            android:textColor="@color/BlueDark"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/buttonView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBaseline="@+id/textViewP"
            android:layout_alignBottom="@+id/textViewP"
            android:layout_toRightOf="@+id/textViewP"
            android:text="@string/PwdSee"
            android:textOff="@string/PwdSeeOFF"
            android:textOn="@string/PwdSeeON" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/buttonView"
            android:layout_marginTop="30dp"
            android:text="@string/txtUrl"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButInternet"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/textViewUrl"
            android:layout_alignLeft="@+id/buttonView"
            android:contentDescription="@string/internet"
            android:src="@drawable/internet" />

        <TextView
            android:id="@+id/textViewNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextTitleRecipe"
            android:layout_below="@+id/editTextTitleRecipe"
            android:layout_marginTop="20dp"
            android:text="@string/txtUser"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>