<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:background="@color/Yellow"
    android:gravity="center"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/checkElem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:text="@string/empty" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textViewNumElem"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ImageButtonMore"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/more"
            android:padding="0dp"
            android:src="@drawable/more"
            android:layout_margin="5dp" />

        <ImageButton
            android:id="@+id/ImageButtonLess"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/less"
            android:padding="0dp"
            android:src="@drawable/less"
            android:layout_margin="5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/titleBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/linearImage"
        android:layout_toRightOf="@+id/imageRecipe"
        android:text="@string/empty"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewNumElem"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/linearLayout1"
        android:contentDescription="@string/empty"
        android:src="@drawable/lbl" />

    <TextView
        android:id="@+id/textViewNumElem"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/checkElem"
        android:background="@color/white"
        android:maxLength="2"
        android:text="@string/defaultAmount"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Red" />

    <LinearLayout
        android:id="@+id/linearImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >

        <ImageButton
            android:id="@+id/imageButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_touch_secondstyle"
            android:contentDescription="@string/menuList2"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/edit" />

        <ImageButton
            android:id="@+id/imageButtonDel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_touch_secondstyle"
            android:contentDescription="@string/delete"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/delete" />
    </LinearLayout>

</RelativeLayout>