<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:background="@color/Yellow"
    android:gravity="center"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/imageButtonEditAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/imageButtonDelAcc"
        android:contentDescription="@string/menuList2"
        android:padding="0dp"
        android:src="@drawable/edit" />
    
    <ImageButton
        android:id="@+id/imageButtonDelAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/delete"
        android:padding="0dp"
        android:src="@drawable/delete" />

    <ImageView
        android:id="@+id/imageRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/empty"
        android:src="@drawable/lbl" />

    <TextView
        android:id="@+id/elemNumAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/imageButtonEditAcc"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/titleElemAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/elemNumAcc"
        android:layout_toRightOf="@+id/imageRecipe"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>